DIAGNOSTICO. Se agrego nombre de grupo de capas

--- a/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/config.json
+++ b/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/config.json
@@ -1,4 +1,9 @@
 {
+    "lyrGroup": [
+        "cartografiaPeligros",
+        "cartografiaRiesgos",
+        "informacionCENEPRED"
+    ],
     "download": [
         {
             "name": "XLS",
